# mdbook-asciidoc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  makefile
.github/workflows/: ci.yml
sample/: .gitignore  book.toml
sample/expected/: book.adoc  book.asciidoc  chapter1.adoc  chapter1.asciidoc  chapter2.adoc  chapter2.asciidoc  chapter3.adoc  chapter3.asciidoc  partA.adoc  partA.asciidoc  partB.adoc  partB.asciidoc
sample/expected/subdir/: chapter4.adoc  chapter4.asciidoc
sample/src/: SUMMARY.md  chapter1.md  chapter2.md  chapter3.md  chapter4.md  partA.md
src/: main.rs  tests.rs
